--- a/style.css
+++ b/style.css
@@ -366,8 +366,12 @@ body.warning .threshold-badge {
 }
 
 #realtime-map {
-    width: 100%;
-    height: 100%;
+    width: 150%;
+    height: 150%;
+    top: -25%;
+    left: -25%;
+    position: absolute;
+    transition: transform 0.5s linear;
 }
 
 /* Maximized Mode Transitions */
